data/derived/sp14/progs/unify/prog2471.ml.out
Characters 64-71:
  | _ -> List.hd xs + sumList List.tl
                              ^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int list
